# CHIP-8_emulator

./: CMakeLists.txt  README.md  decode.c  decode.h  fetch.c  fetch.h  instructions.h  main.c  memory.c  memory.h  registers.h  stack.c  stack.h
.github/workflows/: test.yaml
